--- a/index.html
+++ b/index.html
@@ -37,7 +37,65 @@
     </header>
 
     <main>
-        
+        <section class="plants">
+            <div class="plants-head noto-serif-main"><span class="main-color">Our</span>Plants</div>
+            <div class="plants-discription inter-regular regular-text-size">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</div>
+        </section>
+
+        <section>
+            <div class="card-item">
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h5 class="inter-regular name">Lily Blossom</h5>
+                    <h4 class="inter-regular cost">20 USD</h4>
+                    <button class="btn card-btn">ADD TO CART</button>
+                </div>   
+        </section>
+
+        <section class="plants-lover"></section>
+
 
     </main>
 
