--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/8ea418d73c.js" crossorigin="anonymous"></script>
     <title>Document</title>
     
 </head>
@@ -15,12 +16,12 @@
             </div>
             <div class="menu-item inter-regular">
                 <div class="remove">
-                    <a href=""><button>Home</button></a>
-                    <a href=""><button>Shop</button></a>
-                    <a href=""><button>About us</button></a>
+                    <h3 class="inter-regular">Home</h3>
+                    <h4 class="inter-regular regular-text">Shop</h4>
+                    <h4 class="inter-regular regular-text">About us</h4>
                 </div>
                 <div class="cart">
-                    <a href=""><button>Cart ($56)</button></a>
+                    <h3 class="inter-regular"><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</h3>
                 </div>
             </div>
         </nav>
@@ -94,13 +95,23 @@
                 </div>   
         </section>
 
-        <section class="plants-lover"></section>
+         <section>
+            <div class="plants-lover display-flex">
+                <div>
+                    <img class="trusted-badge" src="assets/trusted-badge.png" alt="">
+                    <img class="plants-lover-image" src="assets/flower-store.png" alt="Loading....">
+                </div>
+                <div class="plants-content">
+                    <h3 class="plants-lover-title">Flower & Plants <span class="hide-on-mobile"><br></span>Lover</h3>
+                    <ul class="plant-lover-description text-gray">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-
-    </main>
-
-    <footer>
-
-    </footer>
+        </main>
 </body>
 </html>
