--- a/index.html
+++ b/index.html
@@ -112,6 +112,43 @@
             </div>
         </section>
 
-        </main>
+        <section class="latest-deal">
+            <div class="deal-content">
+                <h3 class="deal-title-Latest"><span class="text-primary">Latest</span> Deals</h3>
+                <p class="deal-description text-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="latest-deal-image-container display-flex">
+                <div>
+                    <div class="deal-card-1">
+                        <h3>60% Off | Bloom Plant</h3>
+                        <p><a href="">Shop Now</a></p>
+                    </div>
+                    <div class="deal-card-2">
+                        <h3>30% Off | Ana  Plant</h3>
+                        <p><a href="">Shop Now</a></p>
+                    </div>
+                </div>
+                <div>
+                    <div class="deal-card-3">
+                        <h3>25% Off | Zabo Plant</h3>
+                        <p><a href="">Shop Now</a></p>                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+         <section>
+            <div class="join-brunch-content">
+                <h3 class="join-brunch-title">Join the colorful Bunch</h3>
+                <div class="input-form">
+                    <input class="email-input" type="email" name="email" id="" placeholder="Write email">
+                    <button class="btn btn-subs">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    
 </body>
 </html>
