footer is added

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     <img class="plants-lover-image" src="assets/flower-store.png" alt="Loading....">
                 </div>
                 <div class="plants-content">
-                    <h3 class="plants-lover-title">Flower & Plants <span class="hide-on-mobile"><br></span>Lover</h3>
-                    <ul class="plant-lover-description text-gray">
+                    <h3 class="plants-lover-title noto-serif-main">Flower & Plants <span class="hide-on-mobile"><br></span>Lover</h3>
+                    <ul class="plant-lover-description inter-regular regular-text-size">
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
                         <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
@@ -114,8 +114,8 @@
 
         <section class="latest-deal">
             <div class="deal-content">
-                <h3 class="deal-title-Latest"><span class="text-primary">Latest</span> Deals</h3>
-                <p class="deal-description text-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h3 class="deal-title noto-serif-main"><span class="main-color">Latest</span> Deals</h3>
+                <p class="deal-description inter-regular regular-text-size">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="latest-deal-image-container display-flex">
                 <div>
@@ -142,7 +142,7 @@
                 <h3 class="join-brunch-title">Join the colorful Bunch</h3>
                 <div class="input-form">
                     <input class="email-input" type="email" name="email" id="" placeholder="Write email">
-                    <button class="btn btn-subs">Subscribe</button>
+                    <button class="btn ">Subscribe</button>
                 </div>
             </div>
         </section>
@@ -150,30 +150,30 @@
     </main>
 
     <footer class="footer">
-        <div class="Div-footer">
-         <div class="footer-column-1">
+        <div class="footer-container">
+         <div class="column-1">
             <img src="assets/logo.png" alt="LOGO">
-            <p class="footer-description text-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            <p class="footer-description inter-regular regular-text-size ">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
         </div>
-         <div class="footer-column-2">
+         <div class="column-2">
             <ul>
-                <li><a class="text-gray" href="">Home</a></li>
-                <li><a class="text-gray" href="">About Us</a></li>
-                <li><a class="text-gray" href="">Blog</a></li>
-                <li><a class="text-gray" href="">FAQ</a></li>
-                <li><a class="text-gray" href="">Contact Us</a></li>
+                <li><a class="inter-regular regular-text" href="">Home</a></li>
+                <li><a class="inter-regular regular-text" href="">About Us</a></li>
+                <li><a class="inter-regular regular-text" href="">Blog</a></li>
+                <li><a class="inter-regular regular-text" href="">FAQ</a></li>
+                <li><a class="inter-regular regular-text" href="">Contact Us</a></li>
             </ul>
         </div>
-         <div class="footer-column-3">
+         <div class="column-3">
             <ul>
-                <li><a class="text-gray" href="">Feature</a></li>
-                <li><a class="text-gray" href="">Pricing</a></li>
-                <li><a class="text-gray" href="">Privacy Policy</a></li>
-                <li><a class="text-gray" href="">Team of Service</a></li>
-                <li><a class="text-gray" href="">Help Center</a></li>
+                <li><a class="inter-regular regular-text" href="">Feature</a></li>
+                <li><a class="inter-regular regular-text" href="">Pricing</a></li>
+                <li><a class="inter-regular regular-text" href="">Privacy Policy</a></li>
+                <li><a class="inter-regular regular-text" href="">Team of Service</a></li>
+                <li><a class="inter-regular regular-text" href="">Help Center</a></li>
             </ul>
         </div>
-        <div class="footer-column-4">
+        <div class="column-4">
             <img src="assets/icon-linkedin.png" alt="Linkedin">
             <img src="assets/icon-twitter.png" alt="Twitter">
             <img src="assets/icon-facebook.png" alt="Facebook">
